# ESP-Miner

./: .gitignore
components/asic/: CMakeLists.txt  bm1397.c  crc.c  fayksic.c  serial.c
components/asic/include/: fayksic.h
components/stratum/: stratum_api.c
components/stratum/include/: utils.h
components/wifi/: connect.c
experiments/: emu-miner.c  fayksic.c
main/: CMakeLists.txt  Kconfig.projbuild  global_state.h  main.c  system.c  work_queue.c
main/tasks/: asic_task.c  create_jobs_task.c  stratum_task.c
